# SICK_Lidar_Localization

./: 0502.cpp  CMakeLists.txt  README.md  main.cpp  test.cpp
CoLa2 InitializePose/: CMakeLists.txt  README.md  README.txt  lidarFlow.cpp  lidarFlow.h  lidarFormat.cpp  lidarFormat.h  lidarThread.cpp  lidarThread.h  tcpclient_main.cpp
TCP/: README.md  client.cpp  practice.cpp
